[gd_scene load_steps=7 format=3 uid="uid://cje0dr7i7p5j6"]

[ext_resource type="Script" uid="uid://c1jeida5gv1x5" path="res://Scenes/D-ID/d-id.gd" id="2_xjonb"]
[ext_resource type="StyleBox" uid="uid://blr7pehutjipb" path="res://Assets/option_bar_panel.tres" id="3_ei4ip"]
[ext_resource type="PackedScene" uid="uid://d3utho34r6ppv" path="res://Scenes/D-ID/part.tscn" id="4_v4f0r"]
[ext_resource type="StyleBox" uid="uid://cxesbwo4ki7yd" path="res://Assets/content_panel.tres" id="5_a1ova"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_e1osb"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gl7tf"]
content_margin_left = 15.0
content_margin_top = 15.0
content_margin_right = 15.0
content_margin_bottom = 15.0
draw_center = false
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.2541663, 0.28510138, 0.3201532, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
anti_aliasing = false

[node name="D-ID" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 0
script = ExtResource("2_xjonb")

[node name="Option Bar" type="PanelContainer" parent="."]
layout_mode = 2
theme_override_styles/panel = ExtResource("3_ei4ip")

[node name="HFlow" type="HFlowContainer" parent="Option Bar"]
layout_mode = 2

[node name="Home" type="Button" parent="Option Bar/HFlow"]
layout_mode = 2
text = "/"

[node name="File" type="MenuButton" parent="Option Bar/HFlow"]
unique_name_in_owner = true
layout_mode = 2
text = "File"
item_count = 2
popup/item_0/text = "Save    CTRL-S"
popup/item_0/id = 0
popup/item_1/text = "Load    CTRL-L"
popup/item_1/id = 1

[node name="Generate" type="Button" parent="Option Bar/HFlow"]
layout_mode = 2
tooltip_text = "Generate IDs."
text = "Generate"

[node name="ID Count" type="SpinBox" parent="Option Bar/HFlow"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "ID count."
min_value = 1.0
max_value = 500.0
value = 5.0
update_on_text_changed = true

[node name="Copy" type="Button" parent="Option Bar/HFlow"]
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 0
tooltip_text = "Copy output to clipboard."
text = "Copy"

[node name="Content" type="PanelContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = ExtResource("5_a1ova")

[node name="Output" type="TextEdit" parent="Content"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/normal = SubResource("StyleBoxEmpty_e1osb")
theme_override_styles/read_only = SubResource("StyleBoxFlat_gl7tf")
placeholder_text = "No output..."
editable = false
context_menu_enabled = false
emoji_menu_enabled = false
drag_and_drop_selection_enabled = false

[node name="Parts" type="TabContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
current_tab = 1
tabs_position = 1

[node name="Settings" type="HFlowContainer" parent="Parts"]
visible = false
layout_mode = 2
metadata/_tab_index = 0

[node name="Part joiner" type="LineEdit" parent="Parts/Settings"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Part joiner..."
max_length = 25
expand_to_text_length = true

[node name="Part 1" parent="Parts" instance=ExtResource("4_v4f0r")]
layout_mode = 2
metadata/_tab_index = 1

[node name="Part length" parent="Parts/Part 1/HFlow" index="1"]
value = 15.0

[node name="Part 2" parent="Parts" instance=ExtResource("4_v4f0r")]
visible = false
layout_mode = 2
metadata/_tab_index = 2

[node name="Part 3" parent="Parts" instance=ExtResource("4_v4f0r")]
visible = false
layout_mode = 2
metadata/_tab_index = 3

[node name="Part 4" parent="Parts" instance=ExtResource("4_v4f0r")]
visible = false
layout_mode = 2
metadata/_tab_index = 4

[node name="Part 5" parent="Parts" instance=ExtResource("4_v4f0r")]
visible = false
layout_mode = 2
metadata/_tab_index = 5

[node name="Part 6" parent="Parts" instance=ExtResource("4_v4f0r")]
visible = false
layout_mode = 2
metadata/_tab_index = 6

[connection signal="pressed" from="Option Bar/HFlow/Home" to="." method="_on_home_pressed"]
[connection signal="pressed" from="Option Bar/HFlow/Generate" to="." method="_on_generate_pressed"]
[connection signal="value_changed" from="Option Bar/HFlow/ID Count" to="." method="_on_id_count_value_changed"]
[connection signal="pressed" from="Option Bar/HFlow/Copy" to="." method="_on_copy_pressed"]
[connection signal="text_changed" from="Parts/Settings/Part joiner" to="." method="_on_part_joiner_text_changed"]

[editable path="Parts/Part 1"]
